# test_lingk

./: LICENSE  Makefile  README.md  param.namelist  plot_fkinzv.gn  plot_linfreq.gn  plot_mominz.gn
.codex/environments/: environment.toml
dev_python_lingk/: README.md  check_fortran_vs_python.py  cleaner.sh  linear_gyrokinetic.py  lingk.py  plot_fkinzv.py  plot_linfreq.py  plot_mominz.py  requirements.txt  run_lingk.py  test_fortran_python_equivalence.py
dev_python_lingk/test/: test_fortran_python_equivalance.py
src/: clock.f90  fileio.f90  functions.f90  geometry.f90  lingk.f90  parameters.f90
