#!/usr/bin/gnuplot

  set grid
  set logscale y
  set format y "10^{%L}"

  dt_out = 0.1 # Time step for output
  nt = 1000    # Number of plot
  nskip = 1   # Skip of plot

do for[it=0:nt:nskip]{
  input = './data/mominzt.001'
  set title 'Time t = '.sprintf('%7.2f', dt_out*it)
  plot input every :::it::it u 1:($3**2+$4**2) ti '' w lp
  pause 0.1
}
pause -1
